--- a/style.css
+++ b/style.css
@@ -6,12 +6,22 @@ body{
 
 /* My customize button css  */
 .my-btn{
-    color: blue;
+    color: rgb(23, 23, 151);
     background-color: white;
     font-size: 20px;
+    border: 1px solid rgb(23, 23, 151);
 }
 
 .my-btn:hover{
     color: white;
-    background-color: blue;
+    background-color: rgb(23, 23, 151);
+}
+
+.check{
+    color: #5243C2;
+    background-color: #f3f1fc;
+    border-radius: 50%;
+}
+.btn-redius{
+border-radius: 25px;
 }
